[gd_scene load_steps=4 format=3 uid="uid://dwybafb7q1xds"]

[ext_resource type="Script" uid="uid://bwl1ii2047ece" path="res://Scripts/Bosses/Engineer.gd" id="1_p8h64"]
[ext_resource type="PackedScene" uid="uid://cfu0iwx6p66rw" path="res://Scenes/Bosses/Junkyard_Boss/Turret.tscn" id="2_ibf24"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrp3f"]

[node name="Engineer" type="Node2D"]
script = ExtResource("1_p8h64")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_hrp3f")

[node name="Turret" parent="." instance=ExtResource("2_ibf24")]
position = Vector2(-298, 1)

[node name="Turret2" parent="." instance=ExtResource("2_ibf24")]
position = Vector2(284, 6)

[node name="Turret3" parent="." instance=ExtResource("2_ibf24")]
position = Vector2(230, 111)

[node name="Turret4" parent="." instance=ExtResource("2_ibf24")]
position = Vector2(-183, -97)

[node name="Turret5" parent="." instance=ExtResource("2_ibf24")]
position = Vector2(233, -127)

[node name="Turret6" parent="." instance=ExtResource("2_ibf24")]
position = Vector2(-681, -212)
